--- a/SA文件与对应Email获取.ipynb
+++ b/SA文件与对应Email获取.ipynb
@@ -83,7 +83,7 @@
         "### 点击链接下载credentials.json文件，  \n",
         "\n",
         "链接：[https://developers.google.com/drive/api/v3/quickstart/python](https://developers.google.com/drive/api/v3/quickstart/python)  \n",
-        "### 下载完成后点击左侧边栏文件夹图标，将下载到本地的credentials.json文件上传到AutoClone文件夹下。\n",
+        "### 下载完成后点击左侧边栏文件夹图标，将下载到本地的credentials.json文件上传到AutoRclone文件夹下。\n",
         "### <font color=#95C7AE> 如果保存的有请直接上传  \n",
         "\n"
       ]
